--- a/css/style.css
+++ b/css/style.css
@@ -4616,6 +4616,10 @@ label[for="accettazione"] { line-height: 1rem; }
 /* Inizio Smartphone ******************************/
 
 @media all and (max-width: 375px) { /* iPhone 6/7 */
+  
+#social {
+    margin-top: 2em;
+}
 
 #form_modifica input:not(#salva) { width: calc(100% - 32px); }
 
@@ -4846,7 +4850,7 @@ label[for="accettazione"] { line-height: 1rem; }
   right: 32px;
 }
 
-#menu_voci { margin: 5em auto 2em; }
+#menu_voci { margin: 5em auto 1em; }
 
 #menu_voci a { padding: .5em 16%; }
 
